--- a/css/project.css
+++ b/css/project.css
@@ -4,3 +4,47 @@
   text-transform: uppercase;
   text-decoration: underline;
 }
+
+.project-directory,
+.project-directory ul {
+  font-size: 2rem;
+}
+
+.project-directory strong {
+  font-size: 1.5rem;
+}
+
+.all-project-container {
+  margin-bottom: 2rem;
+}
+
+.project-container {
+  /* border-left: 0.5rem solid var(--foreground-color-60); */
+  padding-left: 1rem;
+  margin-bottom: 2rem;
+}
+
+.project-name,
+.project-name strong,
+.project-name span {
+  font-size: 1.5rem;
+}
+
+.project-description,
+.project-description strong,
+.project-description span {
+  font-size: 1.5rem;
+}
+
+.project-tool,
+.project-tool strong,
+.project-tool span {
+  font-size: 1.5rem;
+}
+
+.project-link,
+.project-link strong,
+.project-link span,
+.project-link a {
+  font-size: 1.5rem;
+}
