--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer p {
@@ -49,6 +51,9 @@ body {
   color: var(--foreground-color);
   max-width: 120rem;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 main {
@@ -89,11 +94,6 @@ nav ul {
 }
 
 nav ul li {
-  font-size: 3rem;
-}
-
-/* main body */
-#main-body {
   font-size: 3rem;
 }
 
