--- a/css/project.css
+++ b/css/project.css
@@ -5,13 +5,18 @@
   text-decoration: underline;
 }
 
-.project-directory,
-.project-directory ul {
-  font-size: 2rem;
+.project-directory strong {
+  font-size: 1.8rem;
 }
 
-.project-directory strong {
+.project-directory,
+.project-directory ul {
+  font-size: 2.5rem;
+}
+
+.project-directory a {
   font-size: 1.5rem;
+  color: var(--foreground-color-20);
 }
 
 .all-project-container {
