--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,11 @@
   width: 100%;
   color: var(--background-color);
   background-color: var(--foreground-color-20);
+  margin-top: 5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 0;
 }
 
 .footer p {
@@ -58,12 +57,12 @@ body {
 
 main {
   display: flex;
+  min-height: 100vh;
 }
 
-#main-body {
+.main-body {
   flex: 7;
   width: 100%;
-  height: 100vh; /* Full height of the viewport */
 }
 
 /* nav */
@@ -80,7 +79,7 @@ nav a {
   text-decoration: none;
 }
 
-nav #nav-title {
+nav .nav-title {
   flex: 3;
   font-size: 3rem;
 }
@@ -99,20 +98,19 @@ nav ul li {
 
 /* sidebar */
 
-#side-bar {
+.side-bar {
   flex: 3;
-  height: 100vh;
   padding: 3rem;
   display: flex;
   flex-direction: column;
 }
 
 /* profile */
-#profile {
+.profile {
   margin-left: 1rem;
 }
 
-#profile-img {
+.profile-img {
   width: 20rem; /* Set desired width */
   height: 20rem; /* Set desired height */
   border-radius: 50%; /* This makes it round */
@@ -120,12 +118,12 @@ nav ul li {
   margin-bottom: 2rem;
 }
 
-#profile-name {
+.profile-name {
   font-size: 3rem;
   font-weight: 700;
 }
 
-#profession {
+.profession {
   font-size: 2rem;
   margin-bottom: 3rem;
 }
