--- a/css/project.css
+++ b/css/project.css
@@ -6,16 +6,17 @@
 }
 
 .project-directory strong {
-  font-size: 1.8rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 .project-directory,
 .project-directory ul {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .project-directory a {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   color: var(--foreground-color-20);
 }
 
@@ -32,24 +33,24 @@
 .project-name,
 .project-name strong,
 .project-name span {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .project-description,
 .project-description strong,
 .project-description span {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .project-tool,
 .project-tool strong,
 .project-tool span {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .project-link,
 .project-link strong,
 .project-link span,
 .project-link a {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
