--- a/css/experience.css
+++ b/css/experience.css
@@ -1,3 +1,7 @@
+ul li {
+  font-size: 2rem;
+}
+
 .experience-title {
   font-size: 2.2rem;
   font-weight: 700;
@@ -19,7 +23,6 @@
 }
 
 .experience-details {
-  font-style: italic;
   margin-bottom: 0.5rem;
   display: flex;
   flex-direction: row;
@@ -39,9 +42,4 @@
 
 .experience-details li {
   font-size: 1.5rem;
-}
-
-i {
-  font-size: 2rem;
-  margin: 0 1rem 0 1rem;
 }
