--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --foreground-color-40: #7c7c7c;
   --foreground-color-50: #929292;
   --foreground-color-60: #a7a7a7;
+  --secondary-color: #04aa6d;
 }
 
 * {
@@ -15,6 +16,52 @@
   margin: 0;
 }
 /* common classes */
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--background-color);
+  color: var(--foreground-color);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+main {
+  display: flex;
+  min-height: 100vh;
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
+/* nav */
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  margin: 0rem 5rem;
+  padding-bottom: 1.5rem;
+  position: sticky;
+  top: 0rem;
+  background-color: var(--background-color);
+}
+
+nav a {
+  color: var(--foreground-color-20);
+  text-decoration: none;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+}
+
+nav ul li {
+  font-size: 3rem;
+}
 
 .row {
   display: flex;
@@ -31,7 +78,7 @@
   width: 100%;
   color: var(--background-color);
   background-color: var(--foreground-color-20);
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -44,62 +91,14 @@
 
 /* body */
 
-body {
-  font-family: "Poppins", sans-serif;
-  background-color: var(--background-color);
-  color: var(--foreground-color);
-  max-width: 120rem;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-main {
-  display: flex;
-  min-height: 100vh;
-}
-
 .main-body {
-  flex: 7;
-  width: 100%;
-}
-
-/* nav */
-
-nav {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  margin: 1rem 5rem;
-}
-
-nav a {
-  color: var(--foreground-color-20);
-  text-decoration: none;
-}
-
-nav .nav-title {
-  flex: 3;
-  font-size: 3rem;
-}
-
-nav ul {
-  flex: 7;
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  gap: 5rem;
-}
-
-nav ul li {
-  font-size: 3rem;
+  width: 70rem;
 }
 
 /* sidebar */
 
 .side-bar {
-  flex: 3;
+  width: 30rem;
   padding: 3rem;
   display: flex;
   flex-direction: column;
@@ -108,6 +107,8 @@ nav ul li {
 /* profile */
 .profile {
   margin-left: 1rem;
+  position: sticky;
+  top: 10rem;
 }
 
 .profile-img {
@@ -141,4 +142,21 @@ nav ul li {
   color: var(--foreground-color);
   align-items: center;
   justify-content: start;
+}
+
+.scroll-btn {
+  /* position: sticky; */
+  margin-top: 8rem;
+  margin-left: 8rem;
+  width: 3rem;
+  height: 3rem;
+  display: none;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.scroll-btn i {
+  font-size: 3rem;
+  color: var(--secondary-color);
 }
