--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ nav a {
   text-decoration: none;
 }
 
+.selected {
+  color: var(--secondary-color) !important;
+  text-decoration: underline;
+}
+
 nav ul {
   list-style: none;
   display: flex;
