--- a/css/index.css
+++ b/css/index.css
@@ -42,3 +42,48 @@ strong {
   line-height: 1.3;
   margin-top: 1rem;
 }
+
+/* main {
+  display: flex;
+  min-height: 100vh;
+  max-width: 120rem;
+  margin: 0 auto;
+} */
+
+/* .side-bar {
+  width: 30rem;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+} */
+
+@media (max-width: 767px) {
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .side-bar {
+    width: 30rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+
+  .profile-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .scroll-btn {
+    display: none !important;
+  }
+}
