--- a/css/style.css
+++ b/css/style.css
@@ -40,11 +40,12 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: baseline;
-  margin: 0rem 5rem;
+  padding: 0 2rem;
   padding-bottom: 1.5rem;
   position: sticky;
   top: 0rem;
   background-color: var(--background-color);
+  z-index: 1000;
 }
 
 nav a {
@@ -57,7 +58,7 @@ nav a {
   text-decoration: underline;
 }
 
-nav ul {
+.nav-links {
   list-style: none;
   display: flex;
   flex-direction: row;
@@ -66,6 +67,10 @@ nav ul {
 
 nav ul li {
   font-size: 3rem;
+}
+
+.page-name {
+  display: none;
 }
 
 .row {
@@ -165,4 +170,73 @@ nav ul li {
 .scroll-btn i {
   font-size: 3rem;
   color: var(--secondary-color);
+}
+
+.burger {
+  display: none; /* Initially hidden for larger screens */
+  flex-direction: column; /* Stack lines vertically */
+  cursor: pointer; /* Change cursor to pointer */
+  padding: 0.5rem; /* Padding around the button */
+  margin-top: 1rem;
+}
+
+.line {
+  height: 0.3rem; /* Height of each line */
+  width: 3rem; /* Width of each line */
+  background-color: var(--foreground-color); /* Color of the lines */
+  margin: 0.3rem 0; /* Space between lines */
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
+}
+
+/* For tablets (screen width between 768px and 1024px) */
+@media (max-width: 1024px) and (min-width: 768px) {
+}
+
+/* For mobile devices (screen width less than 768px) */
+@media (max-width: 767px) {
+  .side-bar {
+    display: none;
+  }
+
+  .main-body {
+    margin: 0 auto;
+    width: 90%;
+    min-width: 40rem;
+  }
+
+  .burger {
+    display: flex;
+  }
+
+  nav {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: var(--foreground-color-10);
+    color: var(--foreground-color-60);
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    width: 100%;
+    padding: 1rem;
+    gap: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .nav-active {
+    display: flex;
+  }
+
+  .page-name {
+    display: flex;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.25rem;
+  }
 }
