--- a/css/extracurricular.css
+++ b/css/extracurricular.css
@@ -31,9 +31,11 @@
   margin-bottom: 1rem;
 }
 
-.extracurricular-description strong {
+.extracurricular-description a {
   font-size: 1.7rem;
-  font-weight: 500;
+  text-decoration: underline;
+  font-style: italic;
+  color: var(--secondary-color);
 }
 
 .extracurricular-date {
