--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,14 @@
   margin-bottom: 1rem;
 }
 
-.about-introduction {
-  font-size: 1.8rem;
-  font-weight: 300;
-  line-height: 1.3;
-  margin-bottom: 1rem;
-}
-
 strong {
   font-size: 1.6rem;
   font-weight: 500;
 }
 
-.about-experience {
+.about-introduction,
+.about-overall-experience,
+.about-research-experience {
   font-size: 1.8rem;
   font-weight: 300;
   line-height: 1.3;
