--- a/css/project.css
+++ b/css/project.css
@@ -44,6 +44,7 @@
 .project-description strong,
 .project-description span {
   font-size: 1.7rem;
+  text-align: justify;
 }
 
 .project-description strong {
