--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #f0faf6;
+  --background-color: #f3fbf8;
   --foreground-color: #242424;
   --foreground-color-10: #3a3a3a;
   --foreground-color-20: #505050;
